--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,6 +9,12 @@ body {
         margin-bottom: 50px;
         margin-top: 25px;
     }
+    .page {
+        position: relative;
+        margin: 0 auto;
+        height: 100%;
+        width: 100%;
+    }
 }
 
 
